# preliminaries

./: .gitignore  .travis.yml  LICENCE  README.md  preliminaries.cabal  stack.yaml
source/: Preliminaries.hs
