name:                preliminaries
version:             0.1.0.0
synopsis:            A ridiculously big alternative to the Prelude.
description:         A GHC-only alternative to the Prelude with massive amounts of imports available by default. It's meant to 
homepage:            http://github.com/kerscher/preliminaries
license:             BSD3
license-file:        LICENCE
author:              Yghor Kerscher
maintainer:          kerscher@acm.org
copyright:           Yghor Kerscher
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      source
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , OverloadedLists
                     , LambdaCase
                     , GADTSyntax
                     , RankNTypes
                     , ScopedTypeVariables
                     , DeriveGeneric
                     , TupleSections
                     , BangPatterns
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , MultiWayIf
                     , TypeFamilies
                     , TypeOperators
                     , FunctionalDependencies
                     , DisambiguateRecordFields
                     , MonadComprehensions
                     , BinaryLiterals
                     , RecursiveDo
                     , ParallelListComp
                     , PartialTypeSignatures
                     , RecordWildCards
                     , PatternSynonyms
                     , EmptyCase
                     , InstanceSigs
                     , KindSignatures
                     , RebindableSyntax
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , ConstraintKinds
  exposed-modules:     Preliminaries
  ghc-options:         -Wall
                       -O2
                       -funfolding-use-threshold=16
                       -threaded
                       -optc-O3
                       -optc-ffast-math
                       -rtsopts
                       -with-rtsopts=-N
                       -with-rtsopts=-T
  build-depends:       base
                     , base-unicode-symbols
                     , adjunctions
                     , async
                     , bifunctors
                     , bytestring
                     , both
                     , comonad
                     , containers
                     , containers-unicode-symbols
                     , contravariant
                     , data-default-class
                     , data-default-instances-base
                     , data-default-instances-containers
                     , deepseq
                     , distributive
                     , enclosed-exceptions
                     , either
                     , errors
                     , exceptions
                     , free
                     , groups
                     , invariant
                     , kan-extensions
                     , lens
                     , parallel
                     , pointed
                     , profunctors
                     , monad-control
                     , mmorph
                     , mtl
                     , reflection
                     , recursion-schemes
                     , semigroupoids
                     , semigroups
                     , stm
                     , stm-chans
                     , string-conversions
                     , threads
                     , universe
                     , vector
                     , vector-instances
                     , tagged
                     , text
                     , these
                     , transformers-base
                     , time
                     , unordered-containers
                     , utf8-string
                     , zero