name:                preliminaries
version:             0.1.0.0
synopsis:            A ridiculously big alternative to the Prelude.
description:         A GHC-only alternative to the Prelude with massive amounts of imports available by default.
homepage:            http://github.com/kerscher/preliminaries
license:             BSD3
license-file:        LICENCE
author:              Yghor Kerscher
maintainer:          kerscher@acm.org
copyright:           Yghor Kerscher
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      source
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , OverloadedLists
                     , LambdaCase
                     , GADTSyntax
                     , RankNTypes
                     , ScopedTypeVariables
                     , DeriveGeneric
                     , TupleSections
                     , BangPatterns
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , MultiWayIf
                     , TypeFamilies
                     , TypeOperators
                     , FunctionalDependencies
                     , DisambiguateRecordFields
                     , MonadComprehensions
                     , BinaryLiterals
                     , RecursiveDo
                     , ParallelListComp
                     , PartialTypeSignatures
                     , RecordWildCards
                     , PatternSynonyms
                     , EmptyCase
                     , InstanceSigs
                     , KindSignatures
                     , RebindableSyntax
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , ConstraintKinds
  exposed-modules:     Preliminaries
  ghc-options:         -Wall
                       -fno-warn-unused-imports
                       -fno-warn-dodgy-exports
                       -Werror
                       -O2
  build-depends:       classy-prelude-conduit
                     , abstract-par
                     , bifunctors
                     , microlens-platform
                     , microlens-contra
                     , monad-par
                     , monad-parallel
                     , mono-traversable-instances
                     , parallel
                     , mtl
                     , stm-conduit