name:                preliminaries
version:             0.1.0.0
synopsis:            A larger alternative to the Prelude.
description:         A GHC-only alternative to the Prelude with a large amount of imports available by default.
homepage:            http://github.com/kerscher/preliminaries
license:             BSD3
license-file:        LICENCE
author:              Yghor Kerscher
maintainer:          kerscher@acm.org
copyright:           Yghor Kerscher
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      source
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , OverloadedLists
                     , LambdaCase
                     , GADTSyntax
                     , RankNTypes
                     , ScopedTypeVariables
                     , DeriveGeneric
                     , TupleSections
                     , BangPatterns
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , MultiWayIf
                     , TypeFamilies
                     , TypeOperators
                     , FunctionalDependencies
                     , DisambiguateRecordFields
                     , MonadComprehensions
                     , BinaryLiterals
                     , RecursiveDo
                     , ParallelListComp
                     , PartialTypeSignatures
                     , RecordWildCards
                     , PatternSynonyms
                     , EmptyCase
                     , InstanceSigs
                     , KindSignatures
                     , RebindableSyntax
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , ConstraintKinds
  exposed-modules:     Preliminaries
  ghc-options:         -Wall
                       -Werror
                       -fno-warn-unused-imports
                       -fno-warn-dodgy-exports
                       -O2
  build-depends:       classy-prelude-conduit     >= 1.0.0 && < 2
                     , abstract-par               >= 0.3.3 && < 1
                     , bifunctors                 >= 5.4.1 && < 6
                     , microlens-platform         >= 0.3.5 && < 1
                     , microlens-contra           >= 0.1.0 && < 1
                     , monad-par                  >= 0.3.4 && < 1
                     , monad-parallel             >= 0.7.2 && < 1
                     , mono-traversable-instances >= 0.1.0 && < 1
                     , parallel                   >= 3.2.1 && < 4
                     , mtl                        >= 2.2.1 && < 3
                     , stm-conduit                >= 3.0.0 && < 4